--- a/styles2.css
+++ b/styles2.css
@@ -666,22 +666,28 @@ h3 {
     width: 100%;
 }
 
+/* Add at the beginning of the file, after the font imports */
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+/* Update the mushroom section to prevent overflow */
 .mushroom-section {
-    width: 100vw;
-    margin-left: calc(-50vw + 50%);
-    margin-right: calc(-50vw + 50%);
+    width: 100%;
+    margin: 0;
     overflow: hidden;
     position: relative;
     padding: 0;
 }
 
 .mushrooms {
-    width: 100vw;
+    width: 100%;
     height: 201.25px;
     object-fit: cover;
     position: relative;
-    left: 50%;
-    transform: translateX(-50%);
     margin: 0;
     padding: 0;
     max-width: none;
@@ -707,6 +713,10 @@ h3 {
     flex: 1;
     text-align: left;
     padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100%;
 }
 
 .moving-number {
@@ -718,9 +728,232 @@ h3 {
 }
 
 .moving-data {
-    font-size: 16px;
+    font-size: 20px;
+    font-weight: 300;
     line-height: 1.4;
     opacity: 0.9;
     text-align: left;
     max-width: 280px;
+}
+
+.minus{
+    font-size: xx-large;
+    font-weight: 600;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+    margin-bottom: 100px;
+}
+
+.one-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 1.2; /* Reduced line height */
+    margin-bottom: 30px;
+}
+
+.one {
+    font-size: 50px;
+    font-weight: 200;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+}
+
+/* Comparison Table Styles */
+.comparison-container {
+    max-width: 1200px;
+    margin: 80px auto;
+    padding: 0 20px;
+    font-family: 'NewRailAlphabet', sans-serif;
+}
+
+.benefits-title {
+    font-size: 24px;
+    font-weight: 600;
+    color: #322D2D;
+    margin-bottom: 40px;
+    text-align: left;
+}
+
+.comparison-table {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+.product-headers {
+    display: flex;
+    /* margin-bottom: 20px; */
+    border-bottom: 1px solid #000000;
+    /* padding-bottom: 20px; */
+    padding-right: 14px;
+}
+
+.empty-cell {
+    width: 25%;
+}
+
+.product-cell {
+    width: 18.75%;
+    text-align: center;
+    padding: 5px;
+}
+
+.product-cell img {
+    height: 120px; /* Increased from 80px */
+    width: auto;
+    object-fit: contain;
+    margin-bottom: 15px;
+}
+
+.product-name {
+    font-size: 16px;
+    font-weight: 500;
+    color: #322D2D;
+    margin-top: 10px;
+}
+
+.comparison-row {
+    display: flex;
+    border-bottom: 1px solid #4b4242;
+    /* padding: 5px 0; */
+}
+
+.feature-name {
+    width: 25%;
+    font-size: 16px;
+    color: #322D2D;
+    padding: 15px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+
+.feature-value {
+    width: 18.75%;
+    text-align: center;
+    font-size: 16px;
+    color: #322D2D;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 24px;
+}
+
+.check {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    background-color: #6C8E4C;
+    color: white;
+    border-radius: 50%;
+    font-size: 14px;
+}
+
+.cross {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
+    border: 1px solid #ccc;
+    color: #666;
+    border-radius: 50%;
+    font-size: 14px;
+}
+
+/* Highlight the Alcami column */
+.product-cell:nth-child(2) {
+    background-color: #e9e3c7;
+    padding: 15px;
+    border-radius: 8px 8px 0 0;
+}
+
+.comparison-row .feature-value:nth-child(2) {
+    background-color: #e9e3c7;
+    padding: 15px;
+}
+
+/* Make sure the highlighted column has consistent width */
+.product-headers .product-cell:nth-child(2),
+.comparison-row .feature-value:nth-child(2) {
+    width: 18.75%;
+    box-sizing: border-box;
+}
+
+.feature-value, .product-cell {
+        width: 17.5%;
+    
+}
+.founder-image {
+    width: calc(100% - 128px);
+    max-width: 1600px; /* Increased from default */
+    height: auto;
+    margin: 64px 64px;
+    display: block;
+}
+
+@media screen and (max-width: 768px) {
+    .founder-image {
+        width: calc(100% - 64px);
+        margin: 32px 32px;
+    }
+}
+
+.aboutf{
+    font-size: 40px;
+    margin-left: 64px;
+}
+
+.fbutton{
+    margin-top: -20px;
+    margin-left: 64px;
+}
+
+.founder-text {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 64px;
+    align-items: flex-start;  /* Added this line */
+}
+
+.lorem {
+    font-size: 24px;
+    font-weight: 200;
+    text-align: left;
+    max-width: 50%;
+    margin-top: 0;  /* Changed from -4px to 0 */
+    margin-left: auto;
+}
+
+.feedback-cards {
+    width: 100%;
+    height: 612px;
+    background-color: #e8e5db;
+    margin-top: 150px;
+    position: relative;
+    padding-top: 40px;
+}
+
+.say {
+    font-size: 40px;
+    font-weight: 200;
+    margin-left: 64px;
+    margin-top: 60px;
+    position: relative;
+}
+.people{
+    font-size: 20px;
+    font-weight: 200;
+    margin-left: 64px;
+    margin-top: 20px;
+    position: relative;
 }
