--- a/styles.css
+++ b/styles.css
@@ -1389,3 +1389,9 @@ h3 {
     height: 14px;
     width: 14px;
 }
+
+footer{
+    background-color: #322D2D;
+    height: 409px;
+    margin-top:130px;
+}
