--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@
     align-items: center;
     padding: 0 20px;
     box-sizing: border-box;
-    z-index: 1000;
+    z-index: 1000;;
 }
 
 .rating-wrapper {
@@ -904,6 +904,7 @@
     height: 63.6px;
     display: flex;
     align-items: center;
+    margin-left: 64px;
 }
 
 .logo img {
@@ -961,6 +962,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    margin-right: 64px;
 }
 
 .search-icon {
@@ -1390,8 +1392,3 @@ h3 {
     width: 14px;
 }
 
-footer{
-    background-color: #322D2D;
-    height: 409px;
-    margin-top:130px;
-}
