--- a/styles.css
+++ b/styles.css
@@ -962,7 +962,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-right: 64px;
+    margin-left: 64px;
 }
 
 .search-icon {
