--- a/css/carousel.css
+++ b/css/carousel.css
@@ -23,19 +23,14 @@
     border-radius: 0.5em;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
     background: white;
+    height: 200px;
+    width: 400px;
 }
 
-.cardd > img {
-    border-top-right-radius: inherit;
-    border-top-left-radius: inherit;
-    display: block;
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
+
 
 .cardd > .contentt {
-    background: #0a2640;
+    
     border-bottom-left-radius: inherit;
     border-bottom-right-radius: inherit;
     padding: 1em;
