--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,51 +1,53 @@
 .carousel-container {
-    max-width: 1200px;
+    padding: 2em;
+    max-width: 100vw;
     margin: 0 auto;
-    padding: 20px;
+    overflow: visible;
 }
 
 .wrapper {
     display: flex;
-    gap: 1em;
-    overflow: hidden;
-    width: 55.5em;
+    gap: 2em;
+    overflow: visible;
     margin: 0 auto;
+    width: calc(100% + 4em);
+    padding: 0;
+    margin-left: -2em;
 }
 
 .inner {
     display: flex;
     gap: 1em;
     transition: transform 0.5s ease-in-out;
+    margin-left: 60px;
 }
 
 .cardd {
-    flex: 0 0 17.5em;
+    flex: 0 0 calc((100% - 4em) / 3);
     border-radius: 0.5em;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
     background: white;
-    height: 200px;
-    width: 400px;
+    height: 300px;
+    min-width: 400px;
+    max-width: 400px;
+    margin-left: 70px;
+   margin-right: 70px;
+}
+.center{
+    margin-top: 80px;
 }
 
 
-
-.cardd > .contentt {
-    
-    border-bottom-left-radius: inherit;
-    border-bottom-right-radius: inherit;
-    padding: 1em;
-    text-align: center;
-}
 
 .cardd > .contentt > h1 {
-    color: #fff;
+    color:#0a2640;
     font-size: 1.25rem;
     margin: 0.35em 0;
     line-height: 1;
 }
 
 .cardd > .contentt > h3 {
-    color: #ccc;
+    color: #0a2640;
     font-size: 0.9rem;
     font-weight: 300;
     margin: 0.35em 0;
