--- a/styles.css
+++ b/styles.css
@@ -639,15 +639,32 @@
 
 .search-box {
     display: none;
-    width: 300px;
+    width: 900px;
     position: absolute;
     top: 50.4px;
+    left: 50%;
+    color: #777575;
+    transform: translate(-50%, -50%);
+    margin-top: 25px;
     right: 60px;
     height: 44px;
 }
 
 .search-box.active {
     display: block;
+}
+
+.search-icon {
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+  min-height: 50px;
+  min-width: 50px;
+}
+
+.search-icon:hover {
+  transform: scale(1.1);
 }
 
 .search-box input {
@@ -807,7 +824,9 @@ html, body {
     max-width: 1400px;
     justify-content: space-between;
 }
-
+.margin{
+  margin-right: 80px;
+}
 @media screen and (max-width: 768px) {
     /* Navigation adjustments */
     .navbar {
@@ -820,6 +839,7 @@ html, body {
       z-index: 1000;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
+    
     
     .top-banner {
       font-size: 12px;
