--- a/styles2.css
+++ b/styles2.css
@@ -207,7 +207,7 @@ footer {
     gap: 24px;
 }
 
-.footer-column div {
+.footer-column a {
     display: flex;
     align-items: center;
     gap: 12px;
@@ -763,4 +763,33 @@ body {
         transition-duration: 0.01ms !important;
         scroll-behavior: auto !important;
     }
+}
+
+
+.url-tooltip {
+    visibility: hidden;
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: white;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 10px;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.3s;
+    max-width: 300px;
+    word-wrap: break-word;
+}
+
+.add-to-cart:hover .url-tooltip {
+    visibility: visible;
+    opacity: 1;
+}
+
+.footer-links a{
+    color: white;
+    text-decoration: none;
 }
