--- a/styles.css
+++ b/styles.css
@@ -75,14 +75,19 @@
   display: flex;
   align-items: center;
   gap: 16px;
-  background: rgba(255, 255, 255, 0.9);
+  background: rgba(166, 166, 166, 0.5); /* Reduced opacity */
   padding: 8px;
   border-radius: 100px;
   border: none;
+  margin-right: 20px;
   cursor: pointer;
   transition: all 0.3s ease;
+
 }
 
+.rating-pill span{
+  color: rgb(74, 74, 74);
+}
 .rating-inner {
   display: flex;
   align-items: center;
